--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -144,8 +143,75 @@ footer {
 .footer-column a:hover {
     text-decoration: underline;
 }
-@media screen and (min-width: 480px) {
-body {
-background-color: lightblue;
+
+/* Small screens */
+@media screen and (max-width: 600px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+    .search-bar {
+        width: 100%;
+        margin-bottom: 10px;
+     align-items: center;
+    }
+    .post-ad {
+        margin-left: 0;
+        width: 100%;
+    }
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+    .footer-links {
+        flex-direction: column;
+        align-items: center;
+    }
+    /* Make the icons disappear */
+    .icons {
+        display: none;
+    }
 }
+
+/* Medium screens  */
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 15px;
+    }
+    .search-bar {
+        width: 400px;
+    }
+    .post-ad {
+        margin-left: auto;
+    }
+    nav ul {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .footer-links {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+}
+
+/* Large screens */
+@media screen and (min-width: 1025px) {
+    header {
+        padding: 20px;
+    }
+    .search-bar {
+        width: 500px;
+    }
+    .post-ad {
+        margin-left: 760px;
+    }
+    nav ul {
+        justify-content: center;
+    }
+    .footer-links {
+        max-width: 1200px;
+    }
 }
