--- a/exercise0/style.css
+++ b/exercise0/style.css
@@ -1,3 +1,10 @@
-body{
+body {
     background-color: aquamarine;
+}
+
+#displayText {
+    background-color: aliceblue;
+    padding: 15px;
+    box-shadow: inset 1px 1px 3px black;
+
 }
